# chat_with_LLM_from_termnial

./: README.md  pyproject.toml
chat_model/: chat_model1.py
